--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "lib-flexible": "^0.3.2",
+    "normalize.css": "^7.0.0",
     "vue": "^2.3.3",
     "vue-router": "^2.6.0"
   },
